3.6/release-notes/microsoft-dynamics-ax-2012-connector-release-notes.adoc
= Microsoft Dynamics AX 2012 Connector Release Notes
:keywords: connector, release notes, microsoft, dynamics ax, 2012

The Microsoft Dynamics AX 2012 Connector enables Mule applications to interact with the Microsoft Dynamics AX Query Service. Microsoft Dynamics AX is an enterprise resource planning (ERP) application.

Guide: link:/documentation/display/current/Microsoft+Dynamics+AX+2012+Connector[Microsoft Dynamics AX 2012 Connector]

== Compatibility

[width="100%",cols="20a,80a",options="header"]
|===
|Software
|Version
|Mule Runtime	\3.5.n and later
|Anypoint Studio	|October 2014 and later
|Microsoft Dynamics AX	|2012
|===

== Version 0.9 - May 8, 2015

New in this release:

* Ability to run dynamic queries against AOT tables, or an AOT static query (system or user defined) with full in/out metadata
* Connectivity via the Windows Gateway Service to allow out-of-the-box AX services to be leveraged without additional configuration
