3.7/release-notes/microsoft-dynamics-ax-2012-connector-release-notes.adoc
= Microsoft Dynamics AX 2012 Connector Release Notes
:keywords: connector, release notes, microsoft, dynamics ax, 2012

The Microsoft Dynamics AX 2012 Connector enables Mule applications to interact with the Microsoft Dynamics AX Query Service. Microsoft Dynamics AX is an enterprise resource planning (ERP) application.

Guide: link:/docs/display/current/Microsoft+Dynamics+AX+2012+Connector[Microsoft Dynamics AX 2012 Connector]

== Version 1.0 - July 15, 2015

New in this release:

* In addition to executing static and user-defined queries, you can now create documents in AX using the new Document Service interface.
* Improved interactive performance is achieved by fetching WSDL files in parallel and caching them.

== Version 0.9 - May 8, 2015

=== Compatibility

[width="100%",cols="50,50",options="header"]
|===
|Software |Version
|Mule Runtime |3.5.n and newer
|Anypoint Studio |October 2014 and newer
|Microsoft Dynamics AX |2012
|===

=== New in This Release

* Ability to run dynamic queries against AOT tables, or an AOT static query (system or user defined) with full in/out metadata
* Connectivity via the Windows Gateway Services to allow out-of-the-box AX services to be leveraged without additional configuration
